# c_cpp_matrix

./: CMakeLists.txt  LICENSE  README.md
generic_perf_compare/: CMakeLists.txt  README.md  c_class_operator.cpp  c_struct_api.c  d_buffer_copy_c.c  d_buffer_move_cpp.cpp
generic_perf_compare/benchmarks/: CMakeLists.txt
matrix_perf_compare/: .gitignore  CMakeLists.txt  README.md
matrix_perf_compare/benchmarks/: benchmark_common.hpp  benchmark_config.hpp
matrix_perf_compare/docs/: compiler_explorer.md  methodology.md
matrix_perf_compare/include/c_matrix/: matrix.h
matrix_perf_compare/include/cpp_matrix/: eigen_ops.hpp
matrix_perf_compare/project/: CMakeLists.txt
matrix_perf_compare/scripts/: run_all.py  summarize_results.py
matrix_perf_compare/src/c/: benchmarks_c.c  matrix.c  ops.c
matrix_perf_compare/src/cpp/: benchmarks_cpp.cpp
matrix_perf_compare/tests/c/: test_matrix.c
matrix_perf_compare/tests/cpp/: test_eigen_ops.cpp
scripts/: run_all_benchmarks.py
